--- a/Services.html
+++ b/Services.html
@@ -37,7 +37,7 @@
           <img src="images/qalamlogonew.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
-          <div class="menu-collapse u-custom-font u-font-montserrat" style="font-size: 1rem; letter-spacing: 1px; font-weight: 600;">
+          <div class="menu-collapse u-custom-font u-font-montserrat" style="font-size: 1rem; letter-spacing: 1px; font-weight: 500;">
             <a class="u-button-style u-custom-effect-duration u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
@@ -126,10 +126,12 @@ borders: top right bottom left !important
                 <img src="images/photo-1531403009284-440f080d1e12.jpeg" alt="" class="u-image u-image-default u-image-4" data-image-width="1280" data-image-height="853">
                 <h5 class="u-text u-text-default u-text-7">UX/UI Consulting</h5>
                 <ul class="u-custom-font u-font-roboto u-text u-text-8">
+                  <li>Website Creation</li>
+                  <li>User Friendly Designs</li>
+                  <li>Research Driven Designs</li>
                   <li>User Research &amp; Analysis</li>
                   <li>Wireframing &amp; Prototyping</li>
-                  <li>Bulletpoint two lorem ipsum blah blah blah blah blah blah blah blah blah<br>
-                  </li>
+                  <li>Iterative Design &amp; Testing</li>
                 </ul>
               </div>
             </div>
@@ -148,6 +150,9 @@ borders: top right bottom left !important
     
     
     <footer class="u-align-center u-black u-clearfix u-container-align-center u-footer u-footer" id="sec-5d3a"><div class="u-clearfix u-sheet u-sheet-1">
+        <a href="./" class="u-align-left u-image u-logo u-image-1" data-image-width="983" data-image-height="983" title="Home">
+          <img src="images/qalamlogonew.png" class="u-logo-image u-logo-image-1">
+        </a>
         <div class="u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" target="_blank" data-type="Email" title="Email" href=""><span class="u-icon u-social-email u-social-icon u-text-black u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-c0fb"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-c0fb"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path id="path3864" fill="#FFFFFF" d="M27.2,28h57.6c4,0,7.2,3.2,7.2,7.2l0,0v42.7c0,3.9-3.2,7.2-7.2,7.2l0,0H27.2
 	c-4,0-7.2-3.2-7.2-7.2V35.2C20,31.1,23.2,28,27.2,28 M56,52.9l28.8-17.8H27.2L56,52.9 M27.2,77.7h57.6V43.5L56,61.3L27.2,43.5V77.7z
@@ -163,9 +168,18 @@ C90.6,29.1,82.7,21.3,73.1,21.3z M83,73.3c0,5.5-4.5,9.9-9.9,9.9H38.6c-5.5,0-9.9-4
 c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
           </a>
         </div>
-        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/Untitled-1.png" alt="" data-image-width="400" data-image-height="400">
-        <p class="u-custom-font u-font-montserrat u-text u-text-default u-text-white u-text-1"> ©2024 <span style="font-weight: 600;">QALAM CONSULTING</span>
+        <p class="u-text u-text-default u-text-1">Company</p>
+        <p class="u-text u-text-default u-text-2">Home</p>
+        <p class="u-text u-text-default u-text-3">Help</p>
+        <p class="u-text u-text-4">About Us</p>
+        <p class="u-text u-text-5">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-1" data-href="Services.html">Services</a>
         </p>
+        <p class="u-text u-text-default u-text-6">Contact Us</p>
+        <p class="u-text u-text-7">Market<br>Research
+        </p>
+        <p class="u-text u-text-default u-text-8">Our Team</p>
+        <div class="u-border-1 u-border-white u-line u-line-horizontal u-line-1"></div>
       </div></footer>
   
 </body></html>
