--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 borders: top right bottom left !important
 }</style></header>
     <section class="skrollable u-clearfix u-image u-parallax u-section-1" id="sec-0b67" data-image-width="6000" data-image-height="4000">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-align-center u-custom-font u-font-raleway u-text u-text-body-alt-color u-text-1">RESULTS DRIVEN.<br>GUARANTEED PRECISION.
         </p>
         <p class="u-align-center u-custom-font u-font-raleway u-text u-text-body-alt-color u-text-default u-text-2">Pro-bono Consulting Services for Small &amp; Medium-sized Enterprises (SMEs)</p>
@@ -85,7 +85,7 @@ borders: top right bottom left !important
       
     </section>
     <section class="u-clearfix u-section-2" id="sec-57b9">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-custom-font u-heading-font u-text u-text-default u-text-1">Who We Are</p>
         <p class="u-align-center u-custom-font u-font-raleway u-text u-text-2"> Qalam Consulting is a Brantford-based <span style="font-weight: 700;">pro-bono</span> consulting firm dedicated to seeing small and medium-sized businesses succeed. We strive to resolve the challenges our clients face through tailored solutions and market research.
         </p>
@@ -96,7 +96,7 @@ borders: top right bottom left !important
     <section class="u-clearfix u-custom-color-5 u-section-3" id="sec-fe7d">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-align-center u-text u-text-1">Our Services</h2>
-        <div class="u-expanded-width u-list u-list-1">
+        <div class="custom-expanded u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1"><span class="u-align-center u-file-icon u-icon u-text-custom-color-3 u-icon-1"><img src="images/1168883-d74e7dc9.png" alt=""></span>
@@ -117,7 +117,7 @@ borders: top right bottom left !important
     </section>
     <section class="u-clearfix u-custom-color-5 u-section-4" id="carousel_60b8">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-expanded-width u-list u-list-1">
+        <div class="custom-expanded u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1"><span class="u-align-center u-file-icon u-icon u-text-custom-color-3 u-icon-1"><img src="images/4391389-81853a71.png" alt=""></span>
@@ -170,14 +170,14 @@ borders: top right bottom left !important
         <p class="u-text u-text-4">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-2" data-href="About.html">About Us</a>
         </p>
-        <p class="u-text u-text-default u-text-5">
-          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-3" data-href="Our-Team.html">Our Team</a>
+        <p class="u-text u-text-5">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-3" data-href="Services.html" href="Services.html">Services</a>
         </p>
-        <p class="u-text u-text-6">
-          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-4" data-href="Services.html" href="Services.html">Services</a>
+        <p class="u-text u-text-default u-text-6">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-4" data-href="Contact.html">Contact Us</a>
         </p>
         <p class="u-text u-text-default u-text-7">
-          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-5" data-href="Contact.html">Contact Us</a>
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-5" data-href="Our-Team.html">Our Team</a>
         </p>
         <p class="u-text u-text-8">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-6" data-href="Market.html">Market<br>Research
